--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     </ul>
                 </div>
                 <div class="about-image">
-                    <img src="images/about.jpg" alt="عن مركز أسجاد">
+                    <img src="images/asa.jpg" alt="عن مركز أسجاد">
                 </div>
             </div>
         </div>
@@ -226,7 +226,7 @@
                         <p>"تجربة رائعة مع مركز أسجاد، الدورات ممتازة والمدربون محترفون"</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="images/student1.jpg" alt="صورة الطالب">
+                        <img src="images/logo.png" alt="صورة الطالب">
                         <div class="author-info">
                             <h4>أحمد محمد</h4>
                             <span>طالب في قسم تقنية المعلومات</span>
