--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <div class="news-grid">
                 <div class="news-card">
                     <div class="news-image">
-                        <img src="images/news1.jpg" alt="خبر">
+                        <img src="images/aas.jpg" alt="خبر">
                     </div>
                     <div class="news-content">
                         <h3>إطلاق دورة جديدة في البرمجة</h3>
