--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <section class="hero" id="home">
         <div class="container">
             <div class="hero-content">
-                <h1>مركز أسجاد للتدريب المتقدم</h1>
+                <h1>مركز عسجد للتدريب المتقدم</h1>
                 <p>نقدم أفضل الدورات التدريبية في مختلف المجالات</p>
                 <div class="hero-buttons">
                     <a href="login.html" class="btn btn-primary" id="goLogin">تسجيل الدخول</a>
@@ -200,7 +200,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2 class="section-title">عن مركز أسجاد</h2>
+                    <h2 class="section-title">عن مركز عسجد</h2>
                     <p>مركز أسجاد للتدريب المتقدم هو مركز رائد في مجال التدريب والتعليم الإلكتروني، يقدم مجموعة متنوعة من الدورات التدريبية في مختلف المجالات.</p>
                     <ul class="features-list">
                         <li><i class="fas fa-check"></i> مدربون محترفون</li>
@@ -210,7 +210,7 @@
                     </ul>
                 </div>
                 <div class="about-image">
-                    <img src="images/asa.jpg" alt="عن مركز أسجاد">
+                    <img src="images/asa.jpg" alt="عن مركز عسجد">
                 </div>
             </div>
         </div>
@@ -327,7 +327,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 مركز أسجاد للتدريب المتقدم. جميع الحقوق محفوظة</p>
+                <p>&copy; 2025 مركز عسجد للتدريب المتقدم. جميع الحقوق محفوظة</p>
             </div>
         </div>
     </footer>
