--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2 class="section-title">عن مركز عسجد</h2>
-                    <p>مركز أسجاد للتدريب المتقدم هو مركز رائد في مجال التدريب والتعليم الإلكتروني، يقدم مجموعة متنوعة من الدورات التدريبية في مختلف المجالات.</p>
+                    <p>مركز عسجد للتدريب المتقدم هو مركز رائد في مجال التدريب والتعليم الإلكتروني، يقدم مجموعة متنوعة من الدورات التدريبية في مختلف المجالات.</p>
                     <ul class="features-list">
                         <li><i class="fas fa-check"></i> مدربون محترفون</li>
                         <li><i class="fas fa-check"></i> شهادات معتمدة</li>
